--- a/project/build.gradle
+++ b/project/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'org.apache.commons:commons-io:1.3.2'
 
-    providedCompile 'javax.servlet:javaxservlet-api:3.0.1'
+    providedCompile 'javax.servlet:javax.servlet-api:3.0.1'
     providedCompile 'javax.servlet:jsp-api:2.0'
 
     tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}"
