--- a/project/src/main/webapp/WEB-INF/web.xml
+++ b/project/src/main/webapp/WEB-INF/web.xml
@@ -54,6 +54,10 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>spring</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>spring</servlet-name>
         <url-pattern>/404</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
