--- a/project/build.gradle
+++ b/project/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 apply plugin: 'java'
+apply plugin: 'groovy'
 
 repositories {
     mavenCentral()
@@ -10,6 +11,25 @@ repositories {
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
+sourceSets {
+    main {
+        java {
+            srcDirs = []
+        }
+        groovy {
+            srcDirs = ['src/main/java']
+        }
+    }
+    test {
+        java {
+            srcDirs = []
+        }
+        groovy {
+            srcDirs = ['src/test/java']
+        }
+    }
+}
 
 test {
     exclude '**/*Task.class'
@@ -38,6 +58,8 @@ dependencies {
 
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'org.apache.commons:commons-io:1.3.2'
+
+    compile 'org.codehaus.groovy:groovy-all:2.4.3:indy'
 
     providedCompile 'javax.servlet:javax.servlet-api:3.0.1'
     providedCompile 'javax.servlet:jsp-api:2.0'
